--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,12 +25,12 @@ jobs:
 
     - name: 🧪 run tests
       run: |
-        cd ./tests/BaroquenMelody.Tests/
+        cd ./tests/BaroquenMelody.Library.Tests/
         dotnet test --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
         cp TestResults/*/coverage.opencover.xml .    
 
     - name: 💌 publish code coverage
       uses: codecov/codecov-action@v3
       with:
-        files: /home/runner/work/baroquen-melody/baroquen-melody/tests/BaroquenMelody.Tests/coverage.opencover.xml
+        files: /home/runner/work/baroquen-melody/baroquen-melody/tests/BaroquenMelody.Library.Tests/coverage.opencover.xml
         fail_ci_if_error: true
