--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,5 +32,6 @@ jobs:
     - name: 💌 publish code coverage
       uses: codecov/codecov-action@v4
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
         files: /home/runner/work/baroquen-melody/baroquen-melody/tests/BaroquenMelody.Library.Tests/coverage.opencover.xml
         fail_ci_if_error: true
