--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     - name: 🔨 set up .net
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.0
+        dotnet-version: 8.0.x
 
     - name: ⚗ restore dependencies
       run: dotnet restore src
