Initial Composer Implementation

--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,7 @@ insert_final_newline = true
 [*.cs]
 
 dotnet_diagnostic.SA1010.severity = none
+dotnet_diagnostic.SA1516.severity = none
 
 # require trailing commas
 dotnet_diagnostic.MA0007.severity = none
