On-the-fly Rule Evaluation (#55)

--- a/src/BaroquenMelody/BaroquenMelody.csproj
+++ b/src/BaroquenMelody/BaroquenMelody.csproj
@@ -13,15 +13,8 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <Title>baroquen-melody</Title>
     <AssemblyName>baroquen-melody</AssemblyName>
-    <PackageId>baroquen-melody</PackageId>
+    <PublishAot>true</PublishAot>
     <Description>A tool for creating generative, baroque-style music.</Description>
-    <PackAsTool>true</PackAsTool>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/wbaldoumas/baroquen-melody</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/wbaldoumas/baroquen-melody</PackageProjectUrl>
-    <PackageTags>music;music-generation;generative-music;baroque;melody;midi</PackageTags>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
-    <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Copyright>Copyright ©2024 William Baldoumas</Copyright>
   </PropertyGroup>
 
@@ -42,22 +35,6 @@
 
   <ItemGroup>
     <AdditionalFiles Include="..\..\stylecop.json" Link="stylecop.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="..\..\CHANGELOG.md" Link="CHANGELOG.md" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />
-    <Content Include="..\..\README.md" Link="README.md" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="..\..\LICENSE">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-    <None Include="..\..\README.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
   </ItemGroup>
 
 </Project>
