--- a/.editorconfig
+++ b/.editorconfig
@@ -46,6 +46,12 @@ dotnet_diagnostic.SA1313.severity = none
 # require that get auto-properties begin with "get"
 dotnet_diagnostic.SA1623.severity = none
 
+# require no empty statements
+dotnet_diagnostic.SA1106.severity = none
+dotnet_diagnostic.SA1508.severity = none
+dotnet_diagnostic.SA1502.severity = none
+dotnet_diagnostic.SA1500.severity = none
+
 # don't throw NotImplementedException
 dotnet_diagnostic.MA0025.severity = none
 
