--- a/src/BaroquenMelody.Library/BaroquenMelody.Library.csproj
+++ b/src/BaroquenMelody.Library/BaroquenMelody.Library.csproj
@@ -14,10 +14,11 @@
 
   <ItemGroup>
     <PackageReference Include="Atrea.PolicyEngine" Version="4.0.1" />
+    <PackageReference Include="Atrea.Utilities" Version="1.0.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2024.2.0" />
     <PackageReference Include="LazyCart" Version="0.4.5" />
     <PackageReference Include="Melanchall.DryWetMidi" Version="7.1.0" />
-    <PackageReference Include="Meziantou.Analyzer" Version="2.0.161">
+    <PackageReference Include="Meziantou.Analyzer" Version="2.0.162">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
