--- a/src/BaroquenMelody.App.Components/BaroquenMelody.App.Components.csproj
+++ b/src/BaroquenMelody.App.Components/BaroquenMelody.App.Components.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CodeBeam.MudBlazor.Extensions" Version="7.0.1" />
     <PackageReference Include="Fluxor.Blazor.Web" Version="6.0.0" />
     <PackageReference Include="Meziantou.Analyzer" Version="2.0.163">
       <PrivateAssets>all</PrivateAssets>
