--- a/src/BaroquenMelody.App/Platforms/MacCatalyst/Entitlements.plist
+++ b/src/BaroquenMelody.App/Platforms/MacCatalyst/Entitlements.plist
@@ -9,6 +9,10 @@
         <!-- When App Sandbox is enabled, this value is required to open outgoing network connections. -->
         <key>com.apple.security.network.client</key>
         <true/>
+        <!-- Allow for file access -->
+        <key>com.apple.security.files.user-selected.read-write</key>
+        <true/> 
+        <!-- Follow up changes here: https://developer.apple.com/documentation/security/accessing-files-from-the-macos-app-sandbox -->
     </dict>
 </plist>
 
