--- a/src/BaroquenMelody.App/BaroquenMelody.App.csproj
+++ b/src/BaroquenMelody.App/BaroquenMelody.App.csproj
@@ -63,6 +63,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="CommunityToolkit.Maui" Version="9.0.3" />
         <PackageReference Include="Meziantou.Analyzer" Version="2.0.163">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
