--- a/src/BaroquenMelody.App.Components/BaroquenMelody.App.Components.csproj
+++ b/src/BaroquenMelody.App.Components/BaroquenMelody.App.Components.csproj
@@ -38,4 +38,8 @@
     <AdditionalFiles Include="..\..\stylecop.json" Link="stylecop.json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
