--- a/tests/BaroquenMelody.Library.Tests/BaroquenMelody.Library.Tests.csproj
+++ b/tests/BaroquenMelody.Library.Tests/BaroquenMelody.Library.Tests.csproj
@@ -41,10 +41,15 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="21.0.29" />
   </ItemGroup>
 
   <ItemGroup>
     <AdditionalFiles Include="..\..\stylecop.json" Link="stylecop.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Infrastructure\FileSystem\" />
   </ItemGroup>
 
 </Project>
