Add App Icon & Title

--- a/src/BaroquenMelody.App/BaroquenMelody.App.csproj
+++ b/src/BaroquenMelody.App/BaroquenMelody.App.csproj
@@ -46,10 +46,17 @@
 
     <ItemGroup>
         <!-- App Icon -->
-        <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+        <MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'" Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#1EC8A5" />
+        <MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'" Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#1EC8A5" />
+        <MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'" Include="Resources\AppIcon\Mobile\appicon.svg" ForegroundFile="Resources\AppIcon\Mobile\appiconfg.svg" Color="#1EC8A5" />
+        <MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'" Include="Resources\AppIcon\Mobile\appicon.svg" ForegroundFile="Resources\AppIcon\Mobile\appiconfg.svg" Color="#1EC8A5" />
+        <MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'" Include="Resources\AppIcon\Mobile\appicon.svg" ForegroundFile="Resources\AppIcon\Mobile\appiconfg.svg" Color="#1EC8A5" />
+
+        <!--Title Bar Icon-->
+        <MauiImage Include="Resources\AppIcon\square44x44logo.svg" />
 
         <!-- Splash Screen -->
-        <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
+        <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#1EC8A5" BaseSize="128,128" />
 
         <!-- Images -->
         <MauiImage Include="Resources\Images\*" />
