Dynamics With Velocity Engine

--- a/tests/BaroquenMelody.Library.Tests/BaroquenMelody.Library.Tests.csproj
+++ b/tests/BaroquenMelody.Library.Tests/BaroquenMelody.Library.Tests.csproj
@@ -48,4 +48,8 @@
     <AdditionalFiles Include="..\..\stylecop.json" Link="stylecop.json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dynamics\Engine\Processors\" />
+  </ItemGroup>
+
 </Project>
