--- a/.editorconfig
+++ b/.editorconfig
@@ -82,6 +82,7 @@ dotnet_diagnostic.IDE0027.severity = none
 dotnet_diagnostic.IDE0046.severity = none
 dotnet_diagnostic.IDE0060.severity = none
 dotnet_diagnostic.IDE0130.severity = none
+dotnet_diagnostic.IDE0055.severity = none
 
 # force abstraction over implementation
 dotnet_diagnostic.MA0016.severity = none
