--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,8 @@ insert_final_newline = true
 
 [*.cs]
 
+dotnet_diagnostic.CS0618.severity = none
+
 dotnet_diagnostic.SA1206.severity = none
 
 dotnet_diagnostic.SA1010.severity = none
